--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -20,6 +20,7 @@ passenger_dni_not_null=The passenger dni cannot be null
 route_code_not_null=The route code cannot be empty.
 route_origin_not_null=The route origin cannot be null.
 route_destiny_not_null=The route destiny cannot be null.
+origin_destiny_no_equals=The origin and the destiny cannot be equals.
 fk_travel_bus=Cannot delete the bus because have a relation with one o more travels.
 fk_travel_passenger=Cannot delete the travel because have a relation with one o more passengers.
 passenger_travel_not_found=Not found de passenger in the travel.
