--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -26,6 +26,7 @@ fk_travel_bus=No se puede eliminar el bus debido a que esta relacionada con uno 
 fk_travel_passenger=No se puede eliminar el viaje porque esta relacionada con uno o mas pasajeros.
 passenger_travel_not_found=No se ha encontrado el pasajero en el viaje.
 route_not_found=Ruta no encontrada en la base de datos.
+origin_destiny_no_equals=El origen y el destino de la ruta no puedes ser iguales.
 place_route_not_found=Lugar no encontrado en la ruta.
 delete_passenger=Pasajero eliminado exitosamente.
 delete_place=Lugar eliminado exitosamente.
