--- a/localizator/src/assets/i18n/en.json
+++ b/localizator/src/assets/i18n/en.json
@@ -13,14 +13,19 @@
         "management": "GPS and Travels"
     },
     "bus": {
-        "name": "Name",
-        "lastname": "Lastname",
-        "username": "Username",
-        "email": "Email",
-        "role": "Role",
-        "activated": "Activated",
+        "code": "Code",
+        "number": "Number",
+        "siteCount": "Number of Seats",
+        "company": "Company Name",
+        "selectCompany": "Select  the Company",
         "list": "Bus List",
-        "listmsg": "Show the system bus list"
+        "listmsg": "Show the system bus list",
+        "error": {
+            "requiredCode": "You must insert the bus code",
+            "requiredNumber": "You must insert the bus number",
+            "requiredSiteCount": "You must insert the bus bus list",
+            "requiredCompany": "You must select the bus company"
+        }
     },
     "place": {
         "name": "Name",
@@ -67,8 +72,10 @@
         "listmsg": "Show system companies"
     },
     "actions": "Actions",
-    "notifications": "Notificaciones",
+    "notifications": "Notifications",
     "dashboard": "Dashboard",
     "userprofile": "User Profile",
+    "adminTitle": "Administration",
+    "gpsTravel": "GPS and Travels",
     "accountlock": "Lock Screen"
 }
