--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -40,6 +40,10 @@ travel_cannot_delete=The travel active field cannot be empty or null.
 passenger_travel_passenger_not_null=The passenger in the travel cannot be empty or null.
 passenger_travel_place_not_null=The passenger destiny place cannot be empty or null.
 passenger_travel_travel_not_null=You must select a trip for the passenger.
-empresa_name_not_null=The empress name cannot be empty.
-empresa_bus_count_not_null=The empress bus count cannot be empty.
-empresa_min_bus_count=The minimum bus count must be 1.
+company_name_not_null=The empress name cannot be empty.
+company_bus_count_not_null=The empress bus count cannot be empty.
+company_min_bus_count=The minimum bus count must be 1.
+company_bus_delete=Cannot delete company because is used on one bus.
+router_travel_delete=Cannot delete route because is used on one travel
+router_place_origin_delete=Cannot delete the place because is used as origin in one route.
+router_place_destiny_delete=Cannot delete the place because is used as origin in one route.
