--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -40,10 +40,13 @@ travel_cannot_delete=No se puede eliminar .
 passenger_travel_passenger_not_null=El pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_place_not_null=El lugar del pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_travel_not_null=Se debe seleccionar un viaje para el pasajero.
-empresa_name_not_null=El nombre de la company no debe ser vacio.
-empresa_bus_count_not_null=La cantidad de buses de la company no debe ser vacio.
-empresa_min_bus_count=La cantidad minima de buses de la company debe ser 1.
-
+company_name_not_null=El nombre de la company no debe ser vacio.
+company_bus_count_not_null=La cantidad de buses de la company no debe ser vacio.
+company_min_bus_count=La cantidad minima de buses de la company debe ser 1.
+company_bus_delete=No se puede eliminar la empresa porque esta siendo usada en un bus.
+router_travel_delete=NO se puede eliminar porque la ruta es usada en un viaje.
+router_place_origin_delete=No se puede eliminar el lugar porque esta siendo usado como origen en una ruta.
+router_place_destiny_delete=No se puede eliminar el lugar porque esta siendo usado como destino en una ruta.
 AbstractAccessDecisionManager.accessDenied=Acceso denegado
 AbstractLdapAuthenticationProvider.emptyPassword=Nombre de Usuario o Contrase\u00f1a Incorrectos
 AbstractSecurityInterceptor.authenticationNotFound=El objeto Authentication no ha sido encontrado en el SecurityContext
@@ -57,7 +60,7 @@ AccountStatusUserDetailsChecker.credentialsExpired=Las credenciales del usuario 
 AccountStatusUserDetailsChecker.disabled=El usuario est\u00e1 deshabilitado
 AccountStatusUserDetailsChecker.expired=La cuenta del usuario ha expirado
 AccountStatusUserDetailsChecker.locked=La cuenta del usuario est\u00e1 bloqueada
-AclEntryAfterInvocationProvider.noPermission=Authentication {0} NO tiene permisos para el objeto de dominio {1}
+AclEntryAfterInvocationProvider.noPermission=Authentication {0} No tiene permisos para el objeto de dominio {1}
 AnonymousAuthenticationProvider.incorrectKey=El actual AnonymousAuthenticationToken no contiene la clave esperada
 BindAuthenticator.badCredentials=Nombre de Usuario o Contrase\u00f1a Incorrectos
 BindAuthenticator.emptyPassword=Nombre de Usuario o Contrase\u00f1a Incorrectos
