--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -4,6 +4,7 @@ unique_username=There is a user with this username:
 unique_passenger_dni=There is a passenger with this dni: 
 unique_route_origin_destiny=There is a route with this origin and destiny.
 unique_route_code=There is a route with the same code.
+unique_place_name=There is a place with the same name: {0}.
 bus_not_found=Bus not found in the database
 bus_site_number_not_null=The bus site number cannot be null or zero
 bus_site_number_min=The minimum bus site number must be 2 sites
@@ -16,6 +17,8 @@ usuario_name_not_null=The name of the user cannot be null
 usuario_lastname_not_null=The lastname of the user cannot be null
 usuario_username_not_null=The username cannot be null
 usuario_password_size=The user passsword must be minimum size 1 and maximum size 200
+usuario_email_not_null=The user email cannot be empty.
+usuario_language_not_null=The user language cannot be empty.
 passenger_dni_not_null=The passenger dni cannot be null
 route_code_not_null=The route code cannot be empty.
 route_origin_not_null=The route origin cannot be null.
@@ -37,6 +40,11 @@ travel_arrive_not_null=The travel arrive date cannot be empty or null.
 travel_bus_not_null=The travel bus cannot be empty or null.
 travel_active_not_null=The travel active field cannot be empty or null.
 travel_cannot_delete=The travel active field cannot be empty or null.
+travel_added=The travel has been inserted, continue to add the passengers. 
+travel_successfull_added=The travel has been added successfully. 
+travel_successfull_updated=The travel has been updated, if you wish continue to add or update the passengers.
+travel_deleted=Travel deleted successfully.
+travel_passengers_empty=The has been deleted because have not passengers.
 passenger_travel_passenger_not_null=The passenger in the travel cannot be empty or null.
 passenger_travel_place_not_null=The passenger destiny place cannot be empty or null.
 passenger_travel_travel_not_null=You must select a trip for the passenger.
@@ -44,6 +52,8 @@ company_name_not_null=The empress name cannot be empty.
 company_bus_count_not_null=The empress bus count cannot be empty.
 company_min_bus_count=The minimum bus count must be 1.
 company_bus_delete=Cannot delete company because is used on one bus.
+company_bus_excedded=The company {0} excedded the quantity of buses contracts
 router_travel_delete=Cannot delete route because is used on one travel
 router_place_origin_delete=Cannot delete the place because is used as origin in one route.
 router_place_destiny_delete=Cannot delete the place because is used as origin in one route.
+notification_read_all=All notifications are reads.
