--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -3,7 +3,8 @@ unique_bus_number=Ya existe un bus con ese numero:
 unique_username=Ya existe un usuario con ese nombre de usuario: 
 unique_passenger_dni=Ya existe un pasajero con ese dni: 
 unique_route_origin_destiny=Ya existe una ruta con el mismo origen y destino.
-unique_route_code=Ya existe una ruta con el mismo codigo
+unique_route_code=Ya existe una ruta con el mismo codigo.
+unique_place_name=Ya existe un lugar con el mismo nombre: {0}.
 bus_not_found=Bus no encontrado en la base de datos 
 bus_site_number_not_null=El numero de asientos del bus no debe ser vacio
 bus_site_number_min=El minimo de asientos del bus debe ser 2 asientos
@@ -18,6 +19,8 @@ usuario_name_not_null=El nombre del usuario no puede ser vacio
 usuario_lastname_not_null=El o los apellidos del usuario no puede ser vacio
 usuario_username_not_null=El nombre de usuario no puede ser vacio
 usuario_password_size=La contraseña del usuario debe contener como minimo 1 y como maximo 200 caracteres
+usuario_email_not_null=El correo del usuario no debe ser vacio.
+usuario_language_not_null=El lenguaje del usuario no puede ser vacío.
 passenger_dni_not_null=El dni del pasajero no puede ser vacio
 route_code_not_null=El codigo de la ruta no puede ser vacio
 route_origin_not_null=El origen de la ruta no puede ser nulo.
@@ -37,6 +40,11 @@ travel_arrive_not_null=La fecha de llegada del bus en el viaje no debe ser vacia
 travel_bus_not_null=El bus en el viaje no puede ser vacio.
 travel_active_not_null=El campo activo de viaje no debe ser vacio o null.
 travel_cannot_delete=No se puede eliminar .
+travel_added=Se ha insertado el viaje, continue para añadir los viajeros. 
+travel_successfull_added=Se ha insertado el viaje exitosamente. 
+travel_successfull_updated=Se ha modificado el viaje, si desea continue para añadir o modificar los viajeros. 
+travel_deleted=Viaje eliminado exitosamente.
+travel_passengers_empty=El viaje se ha eliminado porque no contenía pasajeros.
 passenger_travel_passenger_not_null=El pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_place_not_null=El lugar del pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_travel_not_null=Se debe seleccionar un viaje para el pasajero.
@@ -44,9 +52,11 @@ company_name_not_null=El nombre de la company no debe ser vacio.
 company_bus_count_not_null=La cantidad de buses de la company no debe ser vacio.
 company_min_bus_count=La cantidad minima de buses de la company debe ser 1.
 company_bus_delete=No se puede eliminar la empresa porque esta siendo usada en un bus.
+company_bus_excedded=La empresa {0} excede la cantidad de buses contratados
 router_travel_delete=NO se puede eliminar porque la ruta es usada en un viaje.
 router_place_origin_delete=No se puede eliminar el lugar porque esta siendo usado como origen en una ruta.
 router_place_destiny_delete=No se puede eliminar el lugar porque esta siendo usado como destino en una ruta.
+notification_read_all=Todas las notificaciones se han leido.
 AbstractAccessDecisionManager.accessDenied=Acceso denegado
 AbstractLdapAuthenticationProvider.emptyPassword=Nombre de Usuario o Contrase\u00f1a Incorrectos
 AbstractSecurityInterceptor.authenticationNotFound=El objeto Authentication no ha sido encontrado en el SecurityContext
