--- a/localizator/src/assets/i18n/es.json
+++ b/localizator/src/assets/i18n/es.json
@@ -62,13 +62,14 @@
         "title": "Título",
         "description": "Descripción",
         "fecha": "Fecha",
-        "message": "Mensaje",
+        "message": "Tiempo",
         "list": "Lista de Notificaciones",
         "listmsg": "Listado de notificaciones del usuario "
     },
     "company": {
         "name": "Nombre",
         "busCount": "Cantidad de Buses",
+        "canceled": "Cancelado",
         "list": "Lista de Empresas",
         "listmsg": "Muestra el Listado de Empresas del Sistema"
     },
@@ -78,6 +79,7 @@
     "adminTitle": "Administración",
     "gpsTravel": "GPS y Viajes",
     "noCompanies": "Sin Empresa",
+    "welcome": "Bienvenido",
     "userprofile": "Perfil de Usuario",
     "accountlock": "Bloquear Pantalla"
 }
