Mejorando el sistema con table footer

--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -46,6 +46,7 @@ travel_successfull_updated=The travel has been updated, if you wish continue to 
 travel_deleted=Travel deleted successfully.
 travel_passengers_empty=The has been deleted because have not passengers.
 passenger_travel_passenger_not_null=The passenger in the travel cannot be empty or null.
+passenger_travel_exist=The passenger {0} {1} exist in this travel.
 passenger_travel_place_not_null=The passenger destiny place cannot be empty or null.
 passenger_travel_travel_not_null=You must select a trip for the passenger.
 company_name_not_null=The empress name cannot be empty.
