--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -48,6 +48,7 @@ travel_passengers_empty=El viaje se ha eliminado porque no contenía pasajeros.
 passenger_travel_passenger_not_null=El pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_place_not_null=El lugar del pasajero en el viaje no debe ser vacio o nulo.
 passenger_travel_travel_not_null=Se debe seleccionar un viaje para el pasajero.
+passenger_travel_exist=El pasajero {0} {1} ya existe en este viaje.
 company_name_not_null=El nombre de la company no debe ser vacio.
 company_bus_count_not_null=La cantidad de buses de la company no debe ser vacio.
 company_min_bus_count=La cantidad minima de buses de la company debe ser 1.
