Modificando todos los viajes

--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -19,6 +19,7 @@ usuario_username_not_null=The username cannot be null
 usuario_password_size=The user passsword must be minimum size 1 and maximum size 200
 usuario_email_not_null=The user email cannot be empty.
 usuario_language_not_null=The user language cannot be empty.
+usuario_cannot_desactivate_self=Cannot desactivate yourself.
 passenger_dni_not_null=The passenger dni cannot be null
 route_code_not_null=The route code cannot be empty.
 route_origin_not_null=The route origin cannot be null.
@@ -58,3 +59,4 @@ router_travel_delete=Cannot delete route because is used on one travel
 router_place_origin_delete=Cannot delete the place because is used as origin in one route.
 router_place_destiny_delete=Cannot delete the place because is used as origin in one route.
 notification_read_all=All notifications are reads.
+notification_description_msg=The travel with origin {0} and destiny {1} wihth the bus {2} has been added successfully.
