--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -21,6 +21,7 @@ usuario_username_not_null=El nombre de usuario no puede ser vacio
 usuario_password_size=La contraseña del usuario debe contener como minimo 1 y como maximo 200 caracteres
 usuario_email_not_null=El correo del usuario no debe ser vacio.
 usuario_language_not_null=El lenguaje del usuario no puede ser vacío.
+usuario_cannot_desactivate_self=No se puede desactivar usted mismo.
 passenger_dni_not_null=El dni del pasajero no puede ser vacio
 route_code_not_null=El codigo de la ruta no puede ser vacio
 route_origin_not_null=El origen de la ruta no puede ser nulo.
@@ -58,6 +59,7 @@ router_travel_delete=NO se puede eliminar porque la ruta es usada en un viaje.
 router_place_origin_delete=No se puede eliminar el lugar porque esta siendo usado como origen en una ruta.
 router_place_destiny_delete=No se puede eliminar el lugar porque esta siendo usado como destino en una ruta.
 notification_read_all=Todas las notificaciones se han leido.
+notification_description_msg=El viaje de {0} a {1} con el bus {2} ha sido insertado satisfactoriamente.
 AbstractAccessDecisionManager.accessDenied=Acceso denegado
 AbstractLdapAuthenticationProvider.emptyPassword=Nombre de Usuario o Contrase\u00f1a Incorrectos
 AbstractSecurityInterceptor.authenticationNotFound=El objeto Authentication no ha sido encontrado en el SecurityContext
