Añadiendo Mapas al sistema.

--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -30,6 +30,12 @@ fk_travel_passenger=Cannot delete the travel because have a relation with one o 
 passenger_travel_not_found=Not found de passenger in the travel.
 travel_not_found=Trip not found in database.
 place_not_found=Place not found in database.
+place_name_not_null=The place name cannot be empty.
+place_name_min_max_size=The minimum name size must be 1 and the maximum must be 255 characters.
+place_address_not_null=The place address cannot be empty.
+place_address_min_max_size=The minimum place address size must be 1 and the maximum must be 5000 characters.
+place_latitude_not_null=The place latitude on map cannot be empty.
+place_longitude_not_null=The place longitude on map cannot be empty.
 route_not_found=Route not found in database.
 place_route_not_found=Place not found in the route.
 delete_passenger=Passenger deleted successfully.
