--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -12,6 +12,12 @@ bus_site_number_max=El numero maximo de asientos del bus debe ser 100 asientos
 passenger_not_found=Pasajero no encontrado en la base de datos
 travel_not_found=Viaje no encontrado en la base de datos.
 place_not_found=Lugar no encontrado en la base de datos.
+place_name_not_null=El nombre del lugar no puede ser vacío.
+place_name_min_max_size=El tamaño mínimo del nombre del lugar debe ser 1 y máximo 255 caracteres.
+place_address_not_null=La dirección del lugar no puede ser vacía.
+place_address_min_max_size=El tamaño mínimo de la dirección del lugar debe ser 1 y máximo 5000 caracteres.
+place_latitude_not_null=La latitud del lugar en el mapa no debe ser vacía.
+place_longitude_not_null= La longitud del lugar en el mapa no debe ser vacía.
 user_not_found=Usuario no encontrado en la base de datos.
 user_notification_not_found=No se ha encontrado la notificacion en la base de datos.
 usuario_rol_not_null=El rol del usuario no puede ser vacio
