Añadiendo Progress Spinner

--- a/localizator/src/assets/i18n/en.json
+++ b/localizator/src/assets/i18n/en.json
@@ -80,6 +80,6 @@
     "adminTitle": "Administration",
     "gpsTravel": "GPS and Travels",
     "noCompanies": "No Companies",
-    "welcome": "Welcome",
+    "welcome": "Welcome: ",
     "accountlock": "Lock Screen"
 }
