--- a/localizator/src/assets/i18n/es.json
+++ b/localizator/src/assets/i18n/es.json
@@ -79,7 +79,7 @@
     "adminTitle": "Administración",
     "gpsTravel": "GPS y Viajes",
     "noCompanies": "Sin Empresa",
-    "welcome": "Bienvenido",
+    "welcome": "Bienvenido: ",
     "userprofile": "Perfil de Usuario",
     "accountlock": "Bloquear Pantalla"
 }
