Seguinmiento de los mapas

--- a/localizator/src/assets/i18n/en.json
+++ b/localizator/src/assets/i18n/en.json
@@ -49,7 +49,7 @@
         "listmsg": "Show the system routes list"
     },
     "travel": {
-        "name": "Name",
+        "follow": "Follow Travels",
         "lastname": "Lastname",
         "username": "Username",
         "email": "Email",
