--- a/localizator/src/assets/i18n/en.json
+++ b/localizator/src/assets/i18n/en.json
@@ -56,6 +56,8 @@
         "role": "Role",
         "activated": "Activated",
         "list": "Travel List",
+        "course": "Travel In Course",
+        "coursemsg": "Travel In Course At Moment",
         "listmsg": "Show the system travels at the moment"
     },
     "notification": {
