--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -61,6 +61,8 @@ company_bus_count_not_null=The empress bus count cannot be empty.
 company_min_bus_count=The minimum bus count must be 1.
 company_bus_delete=Cannot delete company because is used on one bus.
 company_bus_excedded=The company {0} excedded the quantity of buses contracts
+device_name_not_null=The device name cannot be empty.
+device_traccar_id_not_null=The device id cannot be empty.
 router_travel_delete=Cannot delete route because is used on one travel
 router_place_origin_delete=Cannot delete the place because is used as origin in one route.
 router_place_destiny_delete=Cannot delete the place because is used as origin in one route.
