--- a/src/main/resources/messages_ES.properties
+++ b/src/main/resources/messages_ES.properties
@@ -60,7 +60,9 @@ company_name_not_null=El nombre de la company no debe ser vacio.
 company_bus_count_not_null=La cantidad de buses de la company no debe ser vacio.
 company_min_bus_count=La cantidad minima de buses de la company debe ser 1.
 company_bus_delete=No se puede eliminar la empresa porque esta siendo usada en un bus.
-company_bus_excedded=La empresa {0} excede la cantidad de buses contratados
+company_bus_excedded=La empresa {0} excede la cantidad de buses contratados.
+device_name_not_null=El nombre del dispositivo no puede ser vacío.
+device_traccar_id_not_null=El identificador único del dispositivo no puede ser vacío.
 router_travel_delete=NO se puede eliminar porque la ruta es usada en un viaje.
 router_place_origin_delete=No se puede eliminar el lugar porque esta siendo usado como origen en una ruta.
 router_place_destiny_delete=No se puede eliminar el lugar porque esta siendo usado como destino en una ruta.
