--- a/src/main/resources/messages_EN.properties
+++ b/src/main/resources/messages_EN.properties
@@ -4,7 +4,7 @@ unique_username=There is a user with this username:
 unique_passenger_dni=There is a passenger with this dni: 
 unique_route_origin_destiny=There is a route with this origin and destiny.
 unique_route_code=There is a route with the same code.
-unique_place_name=There is a place with the same name: {0}.
+unique_place_name=There is a device with the same name: {0}.
 bus_not_found=Bus not found in the database
 bus_site_number_not_null=The bus site number cannot be null or zero
 bus_site_number_min=The minimum bus site number must be 2 sites
@@ -30,17 +30,17 @@ fk_travel_passenger=Cannot delete the travel because have a relation with one o 
 passenger_travel_not_found=Not found de passenger in the travel.
 travel_not_found=Trip not found in database.
 place_not_found=Place not found in database.
-place_name_not_null=The place name cannot be empty.
+place_name_not_null=The device name cannot be empty.
 place_name_min_max_size=The minimum name size must be 1 and the maximum must be 255 characters.
-place_address_not_null=The place address cannot be empty.
-place_address_min_max_size=The minimum place address size must be 1 and the maximum must be 5000 characters.
-place_latitude_not_null=The place latitude on map cannot be empty.
-place_longitude_not_null=The place longitude on map cannot be empty.
+place_address_not_null=The device address cannot be empty.
+place_address_min_max_size=The minimum device address size must be 1 and the maximum must be 5000 characters.
+place_latitude_not_null=The device latitude on map cannot be empty.
+place_longitude_not_null=The device longitude on map cannot be empty.
 route_not_found=Route not found in database.
 place_route_not_found=Place not found in the route.
 delete_passenger=Passenger deleted successfully.
 delete_place=Place deleted successfully.
-passenger_place_not_match=The passenger destiny place don't exist in the travel route.
+passenger_place_not_match=The passenger destiny device don't exist in the travel route.
 travel_route_not_null=The route cannot be empty or null.
 travel_date_not_null=The travel date cannot be empty or null.
 travel_arrive_not_null=The travel arrive date cannot be empty or null.
@@ -54,7 +54,7 @@ travel_deleted=Travel deleted successfully.
 travel_passengers_empty=The has been deleted because have not passengers.
 passenger_travel_passenger_not_null=The passenger in the travel cannot be empty or null.
 passenger_travel_exist=The passenger {0} {1} exist in this travel.
-passenger_travel_place_not_null=The passenger destiny place cannot be empty or null.
+passenger_travel_place_not_null=The passenger destiny device cannot be empty or null.
 passenger_travel_travel_not_null=You must select a trip for the passenger.
 company_name_not_null=The empress name cannot be empty.
 company_bus_count_not_null=The empress bus count cannot be empty.
@@ -64,7 +64,7 @@ company_bus_excedded=The company {0} excedded the quantity of buses contracts
 device_name_not_null=The device name cannot be empty.
 device_traccar_id_not_null=The device id cannot be empty.
 router_travel_delete=Cannot delete route because is used on one travel
-router_place_origin_delete=Cannot delete the place because is used as origin in one route.
-router_place_destiny_delete=Cannot delete the place because is used as origin in one route.
+router_place_origin_delete=Cannot delete the device because is used as origin in one route.
+router_place_destiny_delete=Cannot delete the device because is used as origin in one route.
 notification_read_all=All notifications are reads.
 notification_description_msg=The travel with origin {0} and destiny {1} wihth the bus {2} has been added successfully.
